<resources>
    <string name="app_name">MeetPoint</string>
    <string name="username">Username</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="loginhere">Already have an account? <u>Login</u></string>
    <string name="signup">Create Account</string>
    <string name="register">REGISTER</string>
    <string name="reg_username">Enter email </string>
    <string name="reg_password">Enter password</string>
    <string name="reg_email">Enter email</string>
    <string name="signupText">Need an account? <u>Sign Up</u></string>
    <string name="forgotPasswordTextView"><u>Forgot Password?</u></string>
    <string name="Send">Send</string>
    <string name="backToLogin">Back to <u>Login</u></string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>