<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.meetpoint.ForgotPassword">

    <TextView
        android:id="@+id/textView"
        android:layout_width="250dp"
        android:layout_height="160dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/sanfran"
        android:gravity="center"
        android:text="Forgot Password"
        android:textColor="#007569"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textinputLayoutEmailFP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="44dp"
        android:layout_marginRight="30dp"
        android:hint="@string/reg_username"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:boxStrokeWidth="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.266"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EmailFP"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableRight="@drawable/ic_email"
            android:fontFamily="@font/sanfran"
            android:textAlignment="viewStart"
            android:textSize="16dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/resetPasswordBtn"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="140dp"
        android:fontFamily="@font/sanfran"
        android:text="Reset Password"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/white"
        android:textStyle="bold"
        app:backgroundTint="#FF007569"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textinputLayoutEmailFP" />

    <TextView
        android:id="@+id/blankspace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="160dp"
        android:fontFamily="@font/sanfran"
        android:gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/line"
        android:layout_width="345dp"
        android:layout_height="3dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blankspace" />

    <TextView
        android:id="@+id/signupText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/signupText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line"
        tools:targetApi="jelly_bean" />

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="110dp"
        android:layout_height="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/sanfran"
        android:gravity="center"
        android:text="@string/backToLogin"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textinputLayoutEmailFP" />

    <ProgressBar
        android:id="@+id/progressFP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/resetPasswordBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>